--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 terraform.tfstate
 terraform.tfstate.backup
 .terraform/providers/registry.terraform.io/hashicorp/aws/4.41.0/windows_386/terraform-provider-aws_v4.41.0_x5.exe
+.terraform/providers/registry.terraform.io/hashicorp/aws/4.45.0/windows_386/terraform-provider-aws_v4.45.0_x5.exe
+.terraform/providers/registry.terraform.io/hashicorp/null/3.2.1/windows_386/terraform-provider-null_v3.2.1_x5.exe
+.terraform/providers/registry.terraform.io/hashicorp/time/0.9.1/windows_386/terraform-provider-time_v0.9.1_x5.exe
+.terraform/providers/registry.terraform.io/hashicorp/tls/4.0.4/windows_386/terraform-provider-tls_v4.0.4_x5.exe
+.terraform/providers/registry.terraform.io/hashicorp/local/2.2.3/windows_386/terraform-provider-local_v2.2.3_x5.exe
